# pptx-tool

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
pptx_font_fix/: __main__.py  fix.py  package.py  types.py
pptx_tool/: __main__.py  fix.py  package.py  types.py
themes/: freesentation.json  inter-pretendard.json  interdisplay-pretendard.json  nanum-barun.json  nanum-square-round.json  nanum-square.json  office.json  pretendard.json
web/templates/: index.html
