[tool.poetry]
name = "pptx-tool"
version = "0.1.0"
description = ""
authors = ["Joongi Kim <me@daybreaker.info>"]
license = "MIT"

[tool.poetry.scripts]
pptx-tool = "pptx_tool.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.0"
flask = {version = "^3.0.3", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
webui = ["flask"]
